--- a/.github/workflows/pip-compile-docs.yml
+++ b/.github/workflows/pip-compile-docs.yml
@@ -29,8 +29,8 @@ jobs:
       pr-branch: "${{ inputs.pr-branch || 'pip-compile/devel/docs' }}"
       nox-args: >-
         -e
-        'pip-compile-3.11(requirements)'
-        'pip-compile-3.11(requirements-relaxed)'
+        'pip-compile(requirements)'
+        'pip-compile(requirements-relaxed)'
       reset-branch: "${{ inputs.reset-branch || false }}"
       labels: "${{ inputs.labels || 'doc builds,no_backport' }}"
     secrets: inherit
